post-2: add sortable in table

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -2,6 +2,7 @@
   t-title="Listagem de clientes">
 
   <thf-table
+    t-sort="true"
     [t-columns]="columns"
     [t-items]="customers">
   </thf-table>
