post-2: add loading for table

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -4,7 +4,8 @@
   <thf-table
     t-sort="true"
     [t-columns]="columns"
-    [t-items]="customers">
+    [t-items]="customers"
+    [t-loading]="loading">
   </thf-table>
 
 </thf-page-list>
