post-3: add searchTerm and filter

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -1,5 +1,6 @@
 <thf-page-list
-  t-title="Listagem de clientes">
+  t-title="Listagem de clientes"
+  [t-filter]="filter">
 
   <thf-table
     t-sort="true"
