post-3: fix search

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -8,7 +8,7 @@
     [t-items]="customers"
     [t-loading]="loading"
     [t-show-more-disabled]="!hasNext"
-    (t-show-more)="loadData()">
+    (t-show-more)="showMore()">
   </thf-table>
 
 </thf-page-list>
