post-3: add thf-combo in thf-modal for search

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -24,6 +24,14 @@
       [(ngModel)]="name"
       t-label="Nome">
     </thf-input>
+
+    <thf-combo
+      class="thf-sm-6"
+      name="city"
+      [(ngModel)]="city"
+      t-label="Cidade"
+      [t-options]="cityOptions">
+    </thf-combo>
   </form>
 
 </thf-modal>
