post-3: add thf-radio-group in thf-modal for search

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -32,6 +32,15 @@
       t-label="Cidade"
       [t-options]="cityOptions">
     </thf-combo>
+
+    <thf-radio-group
+      class="thf-sm-7"
+      name="genre"
+      [(ngModel)]="genre"
+      t-columns="3"
+      t-label="Gênero"
+      [t-options]="genreOptions">
+    </thf-radio-group>
   </form>
 
 </thf-modal>
