post-3: add thf-checkbox-group in thf-modal for search

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -41,6 +41,14 @@
       t-label="Gênero"
       [t-options]="genreOptions">
     </thf-radio-group>
+
+    <thf-checkbox-group
+      class="thf-sm-5"
+      name="status"
+      [(ngModel)]="status"
+      t-label="Status"
+      [t-options]="statusOptions">
+    </thf-checkbox-group>
   </form>
 
 </thf-modal>
