post-3: advanced filter complete

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -15,7 +15,9 @@
 
 <thf-modal
   #advancedFilter
-  t-title="Busca avançada">
+  t-title="Busca avançada"
+  [t-primary-action]="advancedFilterPrimaryAction"
+  [t-secondary-action]="advancedFilterSecondaryAction">
 
   <form #f="ngForm">
     <thf-input
