post-4: add input for name

--- a/src/app/customers/customer-form/customer-form.component.html
+++ b/src/app/customers/customer-form/customer-form.component.html
@@ -1,4 +1,10 @@
 <thf-page-edit
   t-title="Novo cliente">
 
+  <thf-input class="thf-md-6"
+    name="name"
+    [(ngModel)]="customer.name"
+    t-label="Nome completo">
+  </thf-input>
+
 </thf-page-edit>
