post-4: add form

--- a/src/app/customers/customer-form/customer-form.component.html
+++ b/src/app/customers/customer-form/customer-form.component.html
@@ -1,10 +1,14 @@
 <thf-page-edit
-  t-title="Novo cliente">
+  t-title="Novo cliente"
+  [t-disable-submit]="formCustomer.invalid">
 
-  <thf-input class="thf-md-6"
-    name="name"
-    [(ngModel)]="customer.name"
-    t-label="Nome completo">
-  </thf-input>
+  <form #formCustomer="ngForm">
+    <thf-input class="thf-md-6"
+      name="name"
+      [(ngModel)]="customer.name"
+      t-required
+      t-label="Nome completo">
+    </thf-input>
+  </form>
 
 </thf-page-edit>
