post-4: add thf-input for email and status

--- a/src/app/customers/customer-form/customer-form.component.html
+++ b/src/app/customers/customer-form/customer-form.component.html
@@ -9,6 +9,20 @@
       t-required
       t-label="Nome completo">
     </thf-input>
+
+    <thf-input class="thf-md-6"
+      name="email"
+      [(ngModel)]="customer.email"
+      t-required
+      t-label="E-mail">
+    </thf-input>
+
+    <thf-input class="thf-md-6"
+      name="status"
+      [(ngModel)]="customer.status"
+      t-required
+      t-label="Status">
+    </thf-input>
   </form>
 
 </thf-page-edit>
