post-4: update from thf-input to thf-email

--- a/src/app/customers/customer-form/customer-form.component.html
+++ b/src/app/customers/customer-form/customer-form.component.html
@@ -10,12 +10,12 @@
       t-label="Nome completo">
     </thf-input>
 
-    <thf-input class="thf-md-6"
+    <thf-email class="thf-md-6"
       name="email"
       [(ngModel)]="customer.email"
       t-required
       t-label="E-mail">
-    </thf-input>
+    </thf-email>
 
     <thf-input class="thf-md-6"
       name="status"
