post-4: add thf-datepicker for customer.birthdate

--- a/src/app/customers/customer-form/customer-form.component.html
+++ b/src/app/customers/customer-form/customer-form.component.html
@@ -31,6 +31,12 @@
       [(ngModel)]="customer.nickname"
       t-label="Apelido">
     </thf-input>
+
+    <thf-datepicker class="thf-md-3"
+      name="birthdate"
+      [(ngModel)]="customer.birthdate"
+      t-label="Nascimento">
+    </thf-datepicker>
   </form>
 
 </thf-page-edit>
