post-4: add thf-input for customer.nationality

--- a/src/app/customers/customer-form/customer-form.component.html
+++ b/src/app/customers/customer-form/customer-form.component.html
@@ -44,6 +44,12 @@
       t-label="Gênero"
       [t-options]="genreOptions">
     </thf-select>
+
+    <thf-input class="thf-md-3"
+      name="nationality"
+      [(ngModel)]="customer.nationality"
+      t-label="Nacionalidade">
+    </thf-input>
   </form>
 
 </thf-page-edit>
