post-4: add action for navigate to form

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -1,5 +1,6 @@
 <thf-page-list
   t-title="Listagem de clientes"
+  [t-actions]="actions"
   [t-disclaimer-group]="disclaimerGroup"
   [t-filter]="filter">
 
