post-5: add navigation from list to view

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -6,6 +6,7 @@
 
   <thf-table
     t-sort="true"
+    [t-actions]="tableActions"
     [t-columns]="columns"
     [t-items]="customers"
     [t-loading]="loading"
