post-5: add thf-info in thf-page-detail

--- a/src/app/customers/customer-view/customer-view.component.html
+++ b/src/app/customers/customer-view/customer-view.component.html
@@ -1,4 +1,12 @@
 <thf-page-detail
   t-title="Detalhes do cliente">
 
+  <thf-info t-label="Nome" [t-value]="customer.name"></thf-info>
+
+  <thf-info t-label="Nascimento" [t-value]="customer.birthdate"></thf-info>
+
+  <thf-info t-label="Gênero" [t-value]="customer.genre"></thf-info>
+
+  <thf-info t-label="Status" [t-value]="customer.status"></thf-info>
+
 </thf-page-detail>
