post-5: add type to thf-tag

--- a/src/app/customers/customer-view/customer-view.component.html
+++ b/src/app/customers/customer-view/customer-view.component.html
@@ -16,6 +16,7 @@
 
     <thf-tag class="thf-md-2"
       t-label="Status"
+      [t-type]="customer.status === 'Ativo' ? 'success' : 'danger'"
       [t-value]="customer.status">
     </thf-tag>
   </div>
