post-7: add property t-checkbox in thf-table

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -4,7 +4,8 @@
   [t-disclaimer-group]="disclaimerGroup"
   [t-filter]="filter">
 
-  <thf-table
+  <thf-table #table
+    t-checkbox
     t-sort="true"
     [t-actions]="tableActions"
     [t-columns]="columns"
